Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71710

QAudioOutput fails to handle QAudioFormat with more than 6 channels

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.13
    • 5.9.5
    • Multimedia
    • None
    • Linux/X11

    Description

      I tried audiooutput from qtmultimedia5 examples.

      I just made one modification.
      In audiooutput.cpp file, I replaced following line:
      m_format.setChannelCount(1);
      by:
      m_format.setChannelCount(7);

      After successful compilation, program received SIGABRT and write following lines:
      Assertion 's' failed at pulse/stream.c:2110, function pa_stream_set_state_callback(). Aborting.

      Program works as expected with channel count values from 1 to 6.
      Program fails with channel count values from 7 to 16.

      By looking here, https://github.com/pulseaudio/pulseaudio/blob/master/src/pulse/stream.c, it seems Qt code called pa_stream_set_state_callback function provided by pulseaudio with a null pointer.

      Attachments

        For Gerrit Dashboard: QTBUG-71710
        # Subject Branch Project Status CR V

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            xavier8266 xavier xavier
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes