PulseAudio: Introduce QT_PA_CHANNEL_MAP for QAudioOutput

Introduced QT_PA_CHANNEL_MAP env var to define one of channel mapping definitions:
ALSA = PA_CHANNEL_MAP_ALSA
AUX = PA_CHANNEL_MAP_AUX
WAVEEX = PA_CHANNEL_MAP_WAVEEX
OSS = PA_CHANNEL_MAP_OSS
and PA_CHANNEL_MAP_DEFAULT as default

Usage QT_PA_CHANNEL_MAP=AUX ./app

Also fixed a crash when the number of the channels is too high.

Task-number: QTBUG-71710
Change-Id: I45f7f7499cb7db218d5dc7d2eb7764c835abf8f7
Reviewed-by: Otto Ryynänen <otto.ryynanen@qt.io>
Reviewed-by: Christian Stromme <christian.stromme@qt.io>